# kalshiscenariobot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: NBA-2026-FINALS-G3.game.yaml  NBA-2026-FINALS-G3.scenarios.yaml  WC-2026-JUN23.slate.yaml  WC-2026-JUN24.slate.yaml  WC-2026-JUN25.edges.yaml  WC-2026-JUN25.plays.yaml  WC-2026-JUN25.slate.yaml
docs/: WC-2026-JUN24-market-alignment.md  WC-2026-JUN25-edge-analysis.md  WC-2026-JUN25-market-alignment.md  WC-2026-JUN25-potential-plays.md  world-cup-scenario-research.md
scheduler/: crontab.txt  monitor-cron.openclaw.jsonc
src/nbabot/: __init__.py  alerts.py  audit.py  backtesting.py  calibration.py  cli.py  config.py  execution.py  guardrails.py  kalshi.py  market_discovery.py  marketdata.py  news.py  research.py  risk.py  scenarios.py  scores.py  sizing.py  soccer_research.py  triggers.py  ui.py
src/nbabot/agents/: __init__.py  autopilot.py  backtest.py  base.py  baseline.py  demo_execute.py  discover_markets.py  heartbeat.py  lineups.py  live_execute.py  lock.py  paper.py  reconcile.py  snapshot_market.py  ui.py
tests/: test_smoke.py
