[project]
name = "nba-scenario-bot"
version = "1.0.0"
description = "Self-improving single-game NBA scenario-parlay monitor on Kalshi (baseline → lineups → lock → heartbeat → reconcile)."
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "cryptography>=42",
    "PyYAML>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
nbabot = "nbabot.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
